logs/ethereum-helpers.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Cryptodome'...
Listing './lib/python3.5/site-packages/Cryptodome/Cipher'...
Listing './lib/python3.5/site-packages/Cryptodome/Hash'...
Listing './lib/python3.5/site-packages/Cryptodome/IO'...
Listing './lib/python3.5/site-packages/Cryptodome/Math'...
Listing './lib/python3.5/site-packages/Cryptodome/Protocol'...
Listing './lib/python3.5/site-packages/Cryptodome/PublicKey'...
Listing './lib/python3.5/site-packages/Cryptodome/Random'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Cipher'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Cipher/test_vectors'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Cipher/test_vectors/AES'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Cipher/test_vectors/TDES'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Hash'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Hash/test_vectors'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Hash/test_vectors/BLAKE2b'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Hash/test_vectors/BLAKE2s'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Hash/test_vectors/SHA3'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Hash/test_vectors/keccak'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/IO'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Math'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Protocol'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/PublicKey'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/PublicKey/test_vectors'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/PublicKey/test_vectors/ECC'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Random'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Signature'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Signature/test_vectors'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Signature/test_vectors/DSA'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Signature/test_vectors/ECDSA'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Signature/test_vectors/PKCS1-PSS'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Signature/test_vectors/PKCS1-v1.5'...
Listing './lib/python3.5/site-packages/Cryptodome/SelfTest/Util'...
Listing './lib/python3.5/site-packages/Cryptodome/Signature'...
Listing './lib/python3.5/site-packages/Cryptodome/Util'...
Listing './lib/python3.5/site-packages/ecdsa'...
Listing './lib/python3.5/site-packages/ecdsa-0.13.dist-info'...
Listing './lib/python3.5/site-packages/ethereum_helpers'...
Compiling './lib/python3.5/site-packages/ethereum_helpers/coding.py'...
***   File "./lib/python3.5/site-packages/ethereum_helpers/coding.py", line 72
    raise ValueError(f'Invalid base: {base}.')
                                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ethereum_helpers/coordinates'...
Compiling './lib/python3.5/site-packages/ethereum_helpers/recover.py'...
***   File "./lib/python3.5/site-packages/ethereum_helpers/recover.py", line 63
    raise ValueError(f'"v" must be equal to 27 or 28, '
                                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ethereum_helpers-0.0.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycryptodomex-3.4.7.egg-info'...
Listing './lib/python3.5/site-packages/scrypt-0.8.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/conftest.py'...
***   File "./lib/python3.5/site-packages/tests/conftest.py", line 17
    return [f'{fixtures_pkg_name}.{name}'
                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tests/fixtures'...
Listing './lib/python3.5/site-packages/tests/strategies'...
Compiling './lib/python3.5/site-packages/tests/utils.py'...
***   File "./lib/python3.5/site-packages/tests/utils.py", line 13
    max_iterations=10_000,
                        ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
